--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,9 @@ custom:
     dockerizePip: non-linux
 
 provider:
+  tracing:
+    apiGateway: true
+    lambda: true
   name: aws
   runtime: python3.8
   stage: dev
